# siberianhealth-parser

./: .env.example  .gitignore  README.md  pyproject.toml  run.bat
.github/workflows/: ci.yml
scripts/: explore_site.py
scripts/_explore/: sample_product.html  sample_product.txt
src/sibparser/: __init__.py  __main__.py  config.py  drive.py  runner.py  server.py  site.py  state.py
src/sibparser/static/: app.js  index.html  style.css
tests/: test_runner_filenames.py  test_runner_local_save.py  test_server_routes.py  test_site_parsing.py  test_site_retry.py  test_state.py
